# lv-snn

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README-en.md  README.md
.claude/projects/-Users-rero-Documents-lv-ssn/memory/: feedback_training.md
data/: conversation_multi.json  network.redb
lsm/: ARCHITECTURE.md  Cargo.toml  README-en.md  README.md
lsm/src/: fire_engine.rs  hippocampus.rs  main.rs  network.rs  neuron.rs  server.rs  synapse.rs  tokenizer.rs
scripts/: ai_train.py  fast_train.py  scripts_util.py  test_jamo.py  test_jamo_simple.py  test_words.py
snn/: Cargo.toml  scripts
snn/src/: bitmap.rs  main.rs  network.rs  neuron.rs  region.rs  server.rs  synapse.rs  tokenizer.rs
src/: hippocampus.rs  main.rs  network.rs  neuron.rs  region.rs  server.rs  synapse.rs  tokenizer.rs
