[package]
name = "lv-snn"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
rand = "0.10.0"
rayon = "1.10"
crossbeam = "0.8"
redb = "3.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
